# file-storage

./: .gitignore  .hc  .huskyrc  1-introduction-mdx.90b69bb3.iframe.bundle.js  197.9113246f.iframe.bundle.js  197.9113246f.iframe.bundle.js.LICENSE.txt  197.9113246f.iframe.bundle.js.map  2-1-backend-setup-mdx.72f2ac4c.iframe.bundle.js  2-2-integrity-mdx.2ba38950.iframe.bundle.js  2-3-coordinator-mdx.a0fb724b.iframe.bundle.js  213.7dde83b3.iframe.bundle.js  213.7dde83b3.iframe.bundle.js.LICENSE.txt  213.7dde83b3.iframe.bundle.js.map  3-1-frontend-setup-mdx.00a60e17.iframe.bundle.js  3-1-frontend-setup-mdx.67cea3c8.iframe.bundle.js  3-1-frontend-setup-mdx.f3dd6177.iframe.bundle.js  3-2-file-storage-client-mdx.def13bb0.iframe.bundle.js  30a48d1b.js  403.0252d980.iframe.bundle.js  403.0252d980.iframe.bundle.js.map  433.5cff19da.iframe.bundle.js  446.11455f07.iframe.bundle.js  48.51071ab7.iframe.bundle.js  48.51071ab7.iframe.bundle.js.map  53.6b33bd0e.iframe.bundle.js  53.6b33bd0e.iframe.bundle.js.LICENSE.txt  53.6b33bd0e.iframe.bundle.js.map  53.a9475490.iframe.bundle.js  53.a9475490.iframe.bundle.js.LICENSE.txt  53.a9475490.iframe.bundle.js.map  546.6039a110.iframe.bundle.js  587.704065c6.iframe.bundle.js  601.901675f6.iframe.bundle.js  601.901675f6.iframe.bundle.js.map  630.39ece252.iframe.bundle.js  630.39ece252.iframe.bundle.js.LICENSE.txt  630.39ece252.iframe.bundle.js.map  759.8678684f.iframe.bundle.js  759.8678684f.iframe.bundle.js.map  807.1908c30f.iframe.bundle.js  (+56 more)
.circleci/: config.yml
.github/workflows/: main.yml  update-flake-inputs.yaml
.sandbox/fbDBD2ZCsShhaGQgp7LYT/: conductor-config.yaml
.storybook/: main.cjs  preview-head.html  preview.js
bundle/: bundle.js  bundle.js.map
bundle/services/: file-storage.service.d.ts
crates/file_storage_gateway_zome/: Cargo.toml
crates/file_storage_gateway_zome/src/: lib.rs  provider.rs  provider_dna.rs  requestor.rs  types.rs
crates/file_storage_provider_zome/: Cargo.toml
crates/file_storage_types/: Cargo.toml
crates/file_storage_types/src/: error.rs  lib.rs
crates/file_storage_zome/: Cargo.toml
crates/file_storage_zome/src/: file_chunk.rs  file_metadata.rs  lib.rs
demo/: index.html  web-dev-server.config.mjs
dnas/consumer/zomes/file_storage_gateway/: Cargo.toml
dnas/consumer/zomes/file_storage_gateway/src/: lib.rs  provider.rs  provider_dna.rs  requestor.rs
dnas/file_storage_consumer/zomes/coordinator/file_storage_gateway/: Cargo.toml
dnas/file_storage_consumer/zomes/coordinator/file_storage_gateway/src/: lib.rs  provider.rs  requestor.rs  types.rs
dnas/file_storage_provider/zomes/coordinator/file_storage/: Cargo.toml  zome.nix
dnas/file_storage_provider/zomes/coordinator/file_storage/src/: lib.rs
dnas/file_storage_provider/zomes/integrity/file_storage/: Cargo.toml  zome.nix
dnas/file_storage_provider/zomes/integrity/file_storage/src/: lib.rs
dnas/provider/zomes/file_storage/: Cargo.toml
dnas/provider/zomes/file_storage/src/: file_chunk.rs
docs/: README.md
docs/classes/: filestorageservice.md
elements/: hod-calendar-event.js  hod-calendar-event.js.map  hod-upload-files.d.ts  upload-files.d.ts
example-dna/: Cargo.toml  README.md
example-dna/example-dna.dna.workdir/: dna.json
example-dna/tests/: package-lock.json  package.json
example/dnas/provider/zomes/file_storage_provider/: Cargo.toml
graphql/: queries.js  queries.js.map  resolvers.js  resolvers.js.map  schema.js  schema.js.map
nix/: sources.json
polyfills/: fetch.32366c3902f1d160696086309543c0db.js  systemjs.5ce386687ad0a240c007e20fc051aaed.js  webcomponents.73f0ff428117951339e4deabad8949ed.js
sample-happ/: .hc  README.md
sample-happ/dnas/consumer/zomes/file_storage_gateway/: Cargo.toml
sample-happ/dnas/consumer/zomes/file_storage_gateway/src/: lib.rs
sample-happ/dnas/provider/zomes/file_storage_provider/: Cargo.toml
sample-happ/dnas/provider/zomes/file_storage_provider/src/: lib.rs
sample-happ/tests/: package-lock.json  package.json
sample-happ/workdir/: file-storage-test-happ.happ  file-storage-test.happ  happ.yaml
sb-addons/essentials-actions-2/: manager-bundle.mjs  manager-bundle.mjs.map
sb-addons/essentials-backgrounds-3/: manager-bundle.mjs.map
sb-addons/essentials-controls-1/: manager-bundle.mjs  manager-bundle.mjs.map
sb-addons/essentials-measure-6/: manager-bundle.mjs.map
sb-addons/essentials-outline-7/: manager-bundle.mjs.map
sb-addons/essentials-toolbars-5/: manager-bundle.mjs.map
sb-addons/essentials-viewport-4/: manager-bundle.mjs.map
sb-manager/: chunk-466S36BA.mjs  index.mjs  runtime.mjs
sb-preview/: runtime.mjs
src/: bundle.ts  holochain-dropzone.ts  index.ts  lib.rs  types.ts
src/elements/: upload-files.ts
src/services/: file-storage.service.ts
stories/: 1-introduction.mdx  2.1-backend-setup.mdx  2.2-integrity.mdx  2.3-coordinator.mdx  3.1-frontend-setup.mdx  3.2-file-storage-client.mdx  hod-upload-files.stories.md  show-image.stories.js  template-setup.mdx  upload-files.stories.js
test/: file-storage-service.test.js
tests/: package.json  vitest.config.ts
tests/src/: file_storage.test.ts  index.ts
ui/: .eslintrc.cjs  .eslintrc.js  .gitignore  .hc  README.md  custom-elements.json  es-dev-plugins.js  karma.conf.js  package-lock.json  package.json  rollup-bundle.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  web-dev-server.config.mjs  web-dev.plugins.mjs  web-test-runner.config.mjs
ui/.storybook/: main.js  preview-head.html
ui/demo/: es-dev-server.config.js  index.html  web-dev-server.config.mjs
ui/docs/: globals.md
ui/e2e/: apollo.test.js  (+1 more)
workdir/: happ.yaml
zome/: Cargo.toml  README.md
zome/file_storage.dna.workdir/: dna.json  dna.yaml  file-storage-test.dna
zome/tests/: package-lock.json  package.json
zome/tests/src/: gossip-test.ts  index.ts
zome/todo_rename_zome.dna.workdir/: dna.json
zome/zomes/file_storage/: Cargo.toml
zome/zomes/file_storage/src/: file_chunk.rs  file_metadata.rs  lib.rs  utils.rs
zome/zomes/todo_rename_zome/: Cargo.toml
zome/zomes/todo_rename_zome/src/: calendar_event.rs  lib.rs  utils.rs
(+63 files in other folders)
