[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/integrity/*", "dnas/*/zomes/coordinator/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.4.0-beta-dev.28"
hdk = "0.3.0-beta-dev.32"
holochain = "0.3.0-beta-dev.38"

serde = "1.0.193"

hc_zome_file_storage_integrity = { path = "dnas/file_storage_provider/zomes/integrity/file_storage", version = "0.2.0" }

[workspace.dependencies.hc_zome_file_storage]
path = "dnas/file_storage_provider/zomes/coordinator/file_storage"

[workspace.dependencies.hc_zome_file_storage_gateway]
path = "dnas/file_storage_consumer/zomes/coordinator/file_storage_gateway"

[workspace.dependencies.hc_zome_file_storage_gateway_integrity]
path = "dnas/file_storage_consumer/zomes/integrity/file_storage_gateway"
