[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["dnas/*/zomes/integrity/*", "dnas/*/zomes/coordinator/*"]

[workspace.dependencies]
hdi = "0.6.3"
hdk = "0.5.3"

serde = "1.0.193"
holochain_serialized_bytes = "0.0.56"
hc_zome_file_storage_integrity = { path = "dnas/file_storage_provider/zomes/integrity/file_storage", version = "0.3.1" }

[workspace.dependencies.hc_zome_file_storage]
path = "dnas/file_storage_provider/zomes/coordinator/file_storage"

[workspace.dependencies.hc_zome_file_storage_gateway]
path = "dnas/file_storage_consumer/zomes/coordinator/file_storage_gateway"

[workspace.dependencies.hc_zome_file_storage_gateway_integrity]
path = "dnas/file_storage_consumer/zomes/integrity/file_storage_gateway"
