[workspace]
members = [
  "zomes/file_storage",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "ad6603b3d4f5a8dfc053a0a7c6f2038c98aa79a1", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "ad6603b3d4f5a8dfc053a0a7c6f2038c98aa79a1", package = "holo_hash"}
