[workspace]
members = [
  "zomes/file_storage",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/guillemcordoba/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "fd8049a", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "fd8049a", package = "holo_hash"}
