[workspace]
members = [
  "zomes/file_storage",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/guillemcordoba/hc-utils", branch = "develop", package = "hc_utils"}
hdk = {git = "https://github.com/holochain/holochain", rev = "d2ce21a", package = "hdk"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "d2ce21a", package = "holo_hash"}
