[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "holochain_file_storage_gateway_zome"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "holochain_file_storage_gateway_zome"

[dependencies]
derive_more = "0"
serde = "1"

holo_hash = "0.0.2-alpha.1"
hdk = "0.0.100"
holochain_file_storage_types = { path = "../file_storage_types" }
