[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "hc_zome_file_storage_gateway"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_file_storage_gateway"

[dependencies]
derive_more = "0"
serde = "1"

holo_hash = "0.0.2-alpha.1"
hdk = "0.0.100"
hc_file_storage_types = { path = "../file_storage_types" }
