[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "hc_file_storage_types"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_file_storage_types"

[dependencies]
derive_more = "0"
serde = "1"

chrono = {version = "0.4", features = ["serde"]}
hdk = {version = "0.0.130", features = ["encoding"]}
thiserror = "1.0.20"
