[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "file_storage"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage"

[dependencies]
derive_more = "0"
serde = "1"

hdk3 = {git = "https://github.com/holochain/holochain", rev = "4714fbddc48f1f9987c9f574b8d06510ea58ab16", package = "hdk3"}
