[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "file_storage"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage"

[dependencies]
derive_more = "0"
serde = "1"

hdk3 = {git = "https://github.com/holochain/holochain", rev = "c6b3a4f", package = "hdk3"}
