[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2021"
name = "hc_zome_file_storage_gateway"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_file_storage_gateway"

[dependencies]
derive_more = "0"
serde = "1"

hc_file_storage_types = {path = "../../../../crates/file_storage_types"}
hdk = {version = "0.0.130", features = ["encoding"]}
