[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "hc_zome_file_storage"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_file_storage"

[dependencies]
derive_more = "0"
serde = "1"

hc_file_storage_types = {path = "../../../../crates/file_storage_types"}
hdk = "0.0.108"
holo_hash = {version = "0.0.7", features = ["encoding"]}
