[package]
name = "hc_zome_file_storage_gateway"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_file_storage_gateway"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_file_storage_gateway_integrity = { workspace = true }
hc_zome_file_storage_integrity = { workspace = true, default-features = false }
