[package]
name = "hc_zome_file_storage_coordinator"
version = "0.3.2"
edition = "2021"
license = "MIT"
description = "File storage zome to store files in holochain"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_file_storage_coordinator"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

hc_zome_file_storage_integrity = { workspace = true }
