[package]
name = "hc_zome_file_storage_integrity"
version = "0.1.0"
edition = "2021"
description = "File storage zome to store files in holochain"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_file_storage_integrity"

[dependencies]
hdi = { workspace = true }

chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde = { workspace = true }

[features]
default = ["externs"]
externs = []
