[package]
authors = ["guillem.cordoba@gmail.com"]
edition = "2018"
name = "file_storage_provider"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage_provider"

[dependencies]
derive_more = "0"
holochain_file_storage_zome = {path = "../../../../../crates/file_storage_zome"}
serde = "1"
hdk = "0"